--- a/index.html
+++ b/index.html
@@ -13,47 +13,55 @@
         <p>Explore my interactive simulations and experiments.</p>
     </header>
     <main>
-        <div class="project-card" onclick="window.open('https://wartets.github.io/Bird-cloud/', '_blank')">
-            <div class="image-container">
-                <img src="img/BirdCloud-card.png" alt="Bird-cloud project preview">
-            </div>
-            <div class="content-container">
-                <h2>Bird-cloud</h2>
-                <p>An interactive simulation based on the Boids model, illustrating the collective behavior of birds in flight.</p>
-            </div>
-        </div>
-        <div class="project-card reverse" onclick="window.open('https://wartets.github.io/N-Body-Problem/', '_blank')">
-            <div class="image-container">
-                <img src="img/NBodyProblem-card.png" alt="N-Body-Problem project preview">
-            </div>
-            <div class="content-container">
-                <h2>N-Body-Problem</h2>
-                <p>A scratch-built simulation of an N-body system with gravity, electromagnetism, collisions, and friction. Customize speed, mass, charge, and more!</p>
-            </div>
-        </div>
-        <div class="project-card" onclick="window.open('https://wartets.github.io/Lenia-Simulation/', '_blank')">
-            <div class="image-container">
-                <img src="img/LeniaSimulation-card.png" alt="Lenia Simulation project preview">
-            </div>
-            <div class="content-container">
-                <h2>Lenia-Simulation</h2>
-                <p>A Python script to simulate Lenia, a continuous version of the Game of Life.</p>
-            </div>
-        </div>
-        <div class="project-card reverse" onclick="window.open('https://www.geogebra.org/m/e8duuqzq', '_blank')">
-            <div class="image-container">
-                <img src="img/SolarSystem-card.png" alt="Solar System project preview">
-            </div>
-            <div class="content-container">
-                <h2>SolarSystem</h2>
-                <p>A 3D solar system visualization interface.</p>
-            </div>
-        </div>
+		<div class="project-card" onclick="window.open('https://wartets.github.io/Bird-cloud/', '_blank')">
+			<div class="image-container">
+				<img src="img/BirdCloud-card.png" alt="Bird-cloud project preview">
+			</div>
+			<div class="content-container">
+				<h2>Bird-cloud (Nov, 2024)</h2>
+				<p>An interactive simulation of flocking behavior in birds, based on the Boids model.  
+				Adjust parameters like speed, vision radius, and randomness to see how individual rules create collective patterns.</p>
+			</div>
+		</div>
+
+		<div class="project-card reverse" onclick="window.open('https://wartets.github.io/N-Body-Problem/', '_blank')">
+			<div class="image-container">
+				<img src="img/NBodyProblem-card.png" alt="N-Body-Problem project preview">
+			</div>
+			<div class="content-container">
+				<h2>N-Body-Problem (Oct, 2024)</h2>
+				<p>A physics simulation of an N-body system with gravity, collisions, and electromagnetism.  
+				Customize object properties like mass, charge, and position to observe how forces shape their motion.</p>
+			</div>
+		</div>
+
+		<div class="project-card" onclick="window.open('https://wartets.github.io/Lenia-Simulation/', '_blank')">
+			<div class="image-container">
+				<img src="img/LeniaSimulation-card.png" alt="Lenia Simulation project preview">
+			</div>
+			<div class="content-container">
+				<h2>Lenia-Simulation (Jun, 2024)</h2>
+				<p>Discover Lenia, a continuous cellular automaton that extends Conway's Game of Life.  
+				Explore lifelike, emergent patterns in a world of smooth transitions and endless complexity.</p>
+			</div>
+		</div>
+
+		<div class="project-card reverse" onclick="window.open('https://www.geogebra.org/m/e8duuqzq', '_blank')">
+			<div class="image-container">
+				<img src="img/SolarSystem-card.png" alt="Solar System project preview">
+			</div>
+			<div class="content-container">
+				<h2>SolarSystem (May, 2023)</h2>
+				<p>A 3D solar system visualization.  
+				Interact with the planets and their orbits in a dynamic and immersive interface.</p>
+			</div>
+		</div>
     </main>
-    <footer>
-        <p>&copy; 2024. All rights reserved. Designed by 
-            <a href="https://github.com/wartets" target="_blank">Wartets</a>.
-        </p>
-    </footer>
+	<footer>
+		<p>&copy; 2024. All rights reserved. Designed by 
+			<a href="https://linktr.ee/wartets" target="_blank">Wartets</a>. 
+			Check out more projects on <a href="https://github.com/wartets" target="_blank">GitHub</a>.
+		</p>
+	</footer>
 </body>
 </html>
