--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 </head>
 <body>
     <header>
-        <h1>My Projects</h1>
-        <p>Explore my interactive simulations and experiments.</p>
+		<h1>
+			<span>W</span><span>a</span><span>r</span><span>t</span><span>e</span><span>t</span><span>s</span>
+			<span>'</span>
+			<span>p</span><span>r</span><span>o</span><span>j</span><span>e</span><span>c</span><span>t</span><span>s</span>
+		</h1>
+        <p>Explore my interactive simulations, experiments, and creations.</p>
     </header>
     <main>
+		<!-- Petit pingouin qui se déplace -->
+		<img id="penguin" src="img/pinguin-stop.png" alt="Pingouin" />
+
 		<div class="project-card" onclick="window.open('https://wartets.github.io/Bird-cloud/', '_blank')">
 			<div class="image-container">
 				<img src="img/BirdCloud-card.png" alt="Bird-cloud project preview">
@@ -56,12 +63,36 @@
 				Interact with the planets and their orbits in a dynamic and immersive interface.</p>
 			</div>
 		</div>
+		
+		<div class="music-section">
+			<div class="project-card" onclick="window.open('https://soundcloud.com/wartets', '_blank')">
+				<div class="image-container">
+					<img src="img/Soundcloud-card.jpg" alt="SoundCloud music preview">
+				</div>
+				<div class="content-container">
+					<h2>My Music (SoundCloud)</h2>
+					<p>I create electronic, ambient, funky, and drumcore music.  
+					   I focus on improving my skills and exploring new sounds.  
+					   Check out my tracks and enjoy the beats!</p>
+				</div>
+			</div>
+			
+			<div class="project-card no-image" onclick="window.open('https://www.youtube.com/@Wartets', '_blank')">
+				<div class="content-container">
+					<h2>My Music (YouTube)</h2>
+					<p>Explore my music projects on YouTube.</p>
+				</div>
+			</div>
+		</div>
+
+		<button id="back-to-top" onclick="scrollToTop()">↑</button>
     </main>
 	<footer>
 		<p>&copy; 2024. All rights reserved. Designed by 
-			<a href="https://linktr.ee/wartets" target="_blank">Wartets</a>. 
+			<a href="https://wartets.github.io/Wartets/" target="_blank">Wartets</a>. 
 			Check out more projects on <a href="https://github.com/wartets" target="_blank">GitHub</a>.
 		</p>
 	</footer>
+    <script src="script.js"></script>
 </body>
 </html>
