Mise à jour du style

--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
         <p>Explore my interactive simulations, experiments, and creations.</p>
     </header>
     <main>
-		<!-- Petit pingouin qui se déplace -->
-		<img id="penguin" src="img/pinguin-stop.png" alt="Pingouin" />
-
 		<div class="project-card" onclick="window.open('https://wartets.github.io/Bird-cloud/', '_blank')">
 			<div class="image-container">
 				<img src="img/BirdCloud-card.png" alt="Bird-cloud project preview">
@@ -84,6 +81,11 @@
 				</div>
 			</div>
 		</div>
+		
+		<!-- Petit pingouin qui se déplace et décorations -->
+		<img id="penguin" src="img/pinguin-stop.png" alt="Pingouin" />
+		<div id="background-bushes"></div>
+		<div id="background-snowflakes"></div>
 
 		<button id="back-to-top" onclick="scrollToTop()">↑</button>
     </main>
