Mise à jour des images

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
 			</div>
 		</div>
 		
+		<div id="link-display"></div>
+		
 		<!-- Petit pingouin qui se déplace et décorations -->
 		<img id="penguin" src="img/pinguin-stop.png" alt="Pingouin" />
 		<div id="background-bushes"></div>
