--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     </main>
 	<footer>
 		<p>&copy; 2024. All rights reserved. Designed by 
-			<a href="https://wartets.github.io/Wartets/" target="_blank">Wartets</a>. 
-			Check out more projects on <a href="https://github.com/wartets" target="_blank">GitHub</a>.
+			<a href="https://wartets.github.io/Wartets/" target="_blank">Wartets</a>.
+			<wbr>Check out more projects on <a href="https://github.com/wartets" target="_blank">GitHub</a>.
 		</p>
 	</footer>
     <script src="script.js"></script>
