--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
         <p>Explore my interactive simulations, experiments, and creations.</p>
     </header>
     <main>
+		<div class="project-card reverse" onclick="window.open('https://wartets.github.io/Juila-Set/', '_blank')">
+			<div class="image-container">
+				<img src="img/JuilaSet-card.png" alt="Julia-Set project preview">
+			</div>
+			<div class="content-container">
+				<h2>Julia Set (Nov, 2024)</h2>
+				<p>Explore the beauty of Julia sets with interactive controls to adjust equations and rendering settings.
+				Create custom stunning fractal visuals in "real-time" with a simple interface.</p>
+			</div>
+		</div>
+
 		<div class="project-card" onclick="window.open('https://wartets.github.io/Bird-cloud/', '_blank')">
 			<div class="image-container">
 				<img src="img/BirdCloud-card.png" alt="Bird-cloud project preview">
