--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<img src="img/JuilaSet-card.png" alt="Julia-Set project preview">
 			</div>
 			<div class="content-container">
-				<h2>Julia Set (Nov, 2024)</h2>
+				<h2>Julia-Set (Nov, 2024)</h2>
 				<p>Explore the beauty of Julia sets with interactive controls to adjust equations and rendering settings.
 				Create custom stunning fractal visuals in "real-time" with a simple interface.</p>
 			</div>
@@ -66,7 +66,7 @@
 				<img src="img/SolarSystem-card.png" alt="Solar System project preview">
 			</div>
 			<div class="content-container">
-				<h2>SolarSystem (May, 2023)</h2>
+				<h2>Solar-System (May, 2023)</h2>
 				<p>A 3D solar system visualization.  
 				Interact with the planets and their orbits in a dynamic and immersive interface.</p>
 			</div>
