--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>Explore my interactive simulations, experiments, and creations.</p>
     </header>
     <main>
-		<div class="project-card reverse" onclick="window.open('https://wartets.github.io/Juila-Set/', '_blank')">
+		<div class="project-card reverse" onclick="window.open('https://wartets.github.io/Julia-Set/', '_blank')">
 			<div class="image-container">
 				<img src="img/JuilaSet-card.png" alt="Julia-Set project preview">
 			</div>
