--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</div>
 		</div>
 
-		<div class="project-card reverse" onclick="window.open('https://www.geogebra.org/m/e8duuqzq', '_blank')">
+		<div class="project-card reverse" onclick="window.open('https://wartets.github.io/SolarSystem/', '_blank')">
 			<div class="image-container">
 				<img src="img/SolarSystem-card.png" alt="Solar System project preview">
 			</div>
