--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Wartets' Projects</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://wartets.github.io/N-Body-Problem/image/browser-icon.png">
+    <meta name="description" content="Explore the interactive simulations, experiments, and creations by Wartets (Colin Bossu). From fractals to physics simulations, discover a range of immersive experiences.">
+    <meta name="keywords" content="Wartets, Colin Bossu, interactive simulations, fractals, physics, maths, art, 3D visualization, bird flocking, N-body simulation, solar system, SoundCloud, music, YouTube">
+    <meta name="robots" content="index, follow">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Wartets' Projects | Interactive Simulations & Creations">
+    <meta property="og:description" content="Explore interactive simulations and unique creations by Wartets (Colin Bossu). Dive into maths, physics simulations, and more.">
+    <meta property="og:image" content="https://wartets.github.io/N-Body-Problem/image/browser-icon.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://wartets.github.io/wartets">
 </head>
 <body>
     <header>
@@ -22,7 +31,7 @@
 				<img src="img/JuilaSet-card.png" alt="Julia-Set project preview">
 			</div>
 			<div class="content-container">
-				<h2>Julia-Set (Nov, 2024)</h2>
+				<h2>Julia-Set (Nov 2024)</h2>
 				<p>Explore the beauty of Julia sets with interactive controls to adjust equations and rendering settings.
 				Create custom stunning fractal visuals in "real-time" with a simple interface.</p>
 			</div>
@@ -33,7 +42,7 @@
 				<img src="img/BirdCloud-card.png" alt="Bird-cloud project preview">
 			</div>
 			<div class="content-container">
-				<h2>Bird-cloud (Nov, 2024)</h2>
+				<h2>Bird-cloud (Nov 2024)</h2>
 				<p>An interactive simulation of flocking behavior in birds, based on the Boids model.  
 				Adjust parameters like speed, vision radius, and randomness to see how individual rules create collective patterns.</p>
 			</div>
@@ -44,7 +53,7 @@
 				<img src="img/NBodyProblem-card.png" alt="N-Body-Problem project preview">
 			</div>
 			<div class="content-container">
-				<h2>N-Body-Problem (Oct, 2024)</h2>
+				<h2>N-Body-Problem (Oct 2024)</h2>
 				<p>A physics simulation of an N-body system with gravity, collisions, and electromagnetism.  
 				Customize object properties like mass, charge, and position to observe how forces shape their motion.</p>
 			</div>
@@ -55,7 +64,7 @@
 				<img src="img/LeniaSimulation-card.png" alt="Lenia Simulation project preview">
 			</div>
 			<div class="content-container">
-				<h2>Lenia-Simulation (Jun, 2024)</h2>
+				<h2>Lenia-Simulation (Jun 2024)</h2>
 				<p>Discover Lenia, a continuous cellular automaton that extends Conway's Game of Life.  
 				Explore lifelike, emergent patterns in a world of smooth transitions and endless complexity.</p>
 			</div>
@@ -66,7 +75,7 @@
 				<img src="img/SolarSystem-card.png" alt="Solar System project preview">
 			</div>
 			<div class="content-container">
-				<h2>Solar-System (May, 2023)</h2>
+				<h2>Solar-System (May 2023)</h2>
 				<p>A 3D solar system visualization.  
 				Interact with the planets and their orbits in a dynamic and immersive interface.</p>
 			</div>
