--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Explore the interactive simulations, experiments, and creations by Wartets (Colin Bossu). From fractals to physics simulations, discover a range of immersive experiences.">
     <meta name="keywords" content="Wartets, Colin Bossu, interactive simulations, fractals, physics, maths, art, 3D visualization, bird flocking, N-body simulation, solar system, SoundCloud, music, YouTube">
     <meta name="robots" content="index, follow">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<link rel="apple-touch-icon" href="https://wartets.github.io/N-Body-Problem/image/browser-icon.png">
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Wartets' Projects | Interactive Simulations & Creations">
     <meta property="og:description" content="Explore interactive simulations and unique creations by Wartets (Colin Bossu). Dive into maths, physics simulations, and more.">
