Ajout du Démineur

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
         <p>Explore my interactive simulations, experiments, and creations.</p>
     </header>
     <main>
+		<div class="project-card" onclick="window.open('https://wartets.github.io/Demineur/', '_blank')">
+			<div class="image-container">
+				<img src="img/Demineur-card.png" alt="Aperçu du projet du jeu Démineur">
+			</div>
+			<div class="content-container">
+				<h2>Démineur (Dec 2024) (fr)</h2>
+				<p>Jeu de reflexion ; il faut découvrir toutes les cases sans tomber sur les mines.</p>
+			</div>
+		</div>
+
 		<div class="project-card reverse" onclick="window.open('https://wartets.github.io/Julia-Set/', '_blank')">
 			<div class="image-container">
 				<img src="img/JuilaSet-card.png" alt="Julia-Set project preview">
