--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 			</div>
 			<div class="content-container">
 				<h2>Démineur (Dec 2024) (fr)</h2>
-				<p>Jeu de reflexion ; il faut découvrir toutes les cases sans tomber sur les mines.</p>
+				<p>Un jeu de démineur simple en JavaScript. Découvrez toutes les cases sans toucher une mine !  
+				Ajustez la taille de la grille et le nombre de mines pour personnaliser l'expérience.</p>
 			</div>
 		</div>
 
