--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<img src="img/Demineur-card.png" alt="Aperçu du projet du jeu Démineur">
 			</div>
 			<div class="content-container">
-				<h2>Démineur (Dec 2024) (fr)</h2>
+				<h2>Démineur (Dec 2024)</h2>
 				<p>Un jeu de démineur simple en JavaScript. Découvrez toutes les cases sans toucher une mine !  
 				Ajustez la taille de la grille et le nombre de mines pour personnaliser l'expérience.</p>
 			</div>
