--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta property="og:url" content="https://wartets.github.io/wartets">
 </head>
 <body>
+	<div id="particles-js"></div>
     <header>
 		<h1>
 			<span>W</span><span>a</span><span>r</span><span>t</span><span>e</span><span>t</span><span>s</span>
@@ -130,6 +131,7 @@
 			<wbr>Check out more projects on <a href="https://github.com/wartets" target="_blank">&#x2197;GitHub</a>.
 		</p>
 	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
