Chess-Game project added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
         <p>Explore my interactive simulations, experiments, and creations.</p>
     </header>
     <main>
+		<div class="project-card reverse" onclick="window.open('https://wartets.github.io/Chess-Game/', '_blank')">
+			<div class="image-container">
+				<img src="img/Chess-card.png" alt="Chess Game preview">
+			</div>
+			<div class="content-container">
+				<h2>Chess Game (Jan 2025)</h2>
+				<p>An Interactive chess game, offering classic and random board setups.
+				It allows custom piece placement, and personalized size grid.</p>
+			</div>
+		</div>
+		
 		<div class="project-card" onclick="window.open('https://wartets.github.io/Demineur/', '_blank')">
 			<div class="image-container">
 				<img src="img/Demineur-card.png" alt="Aperçu du projet du jeu Démineur">
