--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
         <p>Explore my interactive simulations, experiments, and creations.</p>
     </header>
     <main>
+		<div class="project-card" onclick="window.open('https://wartets.github.io/Sudoku/', '_blank')">
+			<div class="image-container">
+				<img src="img/Sudoku-card.png" alt="Sudoku project preview">
+			</div>
+			<div class="content-container">
+				<h2>Sudoku (Fev 2025)</h2>
+				<p>A customizable web-based Sudoku game that allows you to adjust both the grid size and difficulty level. 
+				It features real-time input validation, providing an interactive and engaging puzzle-solving experience.</p>
+			</div>
+		</div>
+		
 		<div class="project-card reverse" onclick="window.open('https://wartets.github.io/Chess-Game/', '_blank')">
 			<div class="image-container">
 				<img src="img/Chess-card.png" alt="Chess Game preview">
