--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
 			<span>'</span>
 			<span>p</span><span>r</span><span>o</span><span>j</span><span>e</span><span>c</span><span>t</span><span>s</span>
 		</h1>
+		<h4>Also known as <i>Colin Bossu</i></h4>
         <p>Explore my interactive simulations, experiments, and creations.</p>
     </header>
     <main>
 		<div class="double-section">
-			<div class="project-card" onclick="window.open('https://wartets.github.io/Space-Trip-3D', '_blank')">
+			<div class="project-card reverse" onclick="window.open('https://wartets.github.io/Space-Trip-3D', '_blank')">
 				<div class="image-container">
-					<img src="img/Spaceship-card.jpg" alt="Space Ship 3D Game preview">
+					<img src="img/Spaceship-card.png" alt="Space Ship 3D Game preview">
 				</div>
 				<div class="content-container">
 					<h2>Space Trip Game 3D (Apr 2025)</h2>
@@ -159,7 +160,7 @@
 		
 		<div id="link-display"></div>
 		
-		<!-- Petit pingouin qui se déplace et décorations -->
+		<!-- Small penguin -->
 		<img id="penguin" src="img/pinguin-stop.png" alt="Pingouin" style="display:none"/> <!-- Pingouin désactivé -->
 		<div id="background-bushes"></div>
 		<div id="background-snowflakes"></div>
