--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="keywords" content="Wartets, Colin Bossu, interactive simulations, fractals, physics, maths, music, game, art, 3D visualization, bird flocking, N-body simulation, solar system, SoundCloud, music, YouTube">
 	<meta name="robots" content="index, follow">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<link rel="apple-touch-icon" href="https://wartets.github.io/Waretets/image/app-icon.jpg">
+	<link rel="apple-touch-icon" href="https://wartets.github.io/Wartets/image/app-icon.jpg">
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="Wartets' Projects | Interactive Simulations & Creations">
 	<meta property="og:description" content="Explore interactive simulations and unique creations by Wartets (Colin Bossu). Dive into maths, physics simulations, and more.">
@@ -29,9 +29,19 @@
 		<h4>Also known as <i>Colin Bossu</i></h4>
 		<p>Explore my interactive simulations, experiments, and creations.</p>
 	</header>
-	<main>
+	<main>		
+		<div class="project-card reverse" onclick="window.open('https://wartets.github.io/Curve-Fitting/', '_blank')">
+			<div class="image-container">
+				<img src="img/Curve-Fitting-card.png" alt="Curve-Fitting project preview">
+			</div>
+			<div class="content-container">
+				<h2>Curve Fitting (Jun 2025)</h2>
+				<p>This project illustrates thin-plate splines, a smooth surface interpolation technique used in geometry and machine learning. </p>
+			</div>
+		</div>
+		
 		<div class="double-section">
-			<div class="project-card reverse" onclick="window.open('https://wartets.github.io/Space-Trip-3D', '_blank')">
+			<div class="project-card" onclick="window.open('https://wartets.github.io/Space-Trip-3D', '_blank')">
 				<div class="image-container">
 					<img src="img/Spaceship-card.png" alt="Space Ship 3D Game preview">
 				</div>
@@ -41,10 +51,13 @@
 				</div>
 			</div>
 			
-			<div class="project-card no-image" onclick="window.open('https://wartets.github.io/Space-Trip-2D', '_blank')">
+			<div class="project-card reverse" onclick="window.open('https://wartets.github.io/Space-Trip-2D', '_blank')">
+				<div class="image-container">
+					<img src="img/Space-Trip-2D.png" alt="Space Ship 2D Game preview">
+				</div>
 				<div class="content-container">
 					<h2>Space Trip Game 2D (Mar 2025)</h2>
-					<p>Simplified 2D version of the Space Trip game.</p>
+					<p>"Simplified" 2D version of the Space Trip game.</p>
 				</div>
 			</div>
 		</div>
