--- a/index.html
+++ b/index.html
@@ -29,14 +29,25 @@
 		<h4>Also known as <i>Colin Bossu</i></h4>
 		<p>Explore my interactive simulations, experiments, and creations.</p>
 	</header>
-	<main>		
-		<div class="project-card reverse" onclick="window.open('https://wartets.github.io/Curve-Fitting/', '_blank')">
+	<main>
+		<div class="project-card" onclick="window.open('https://wartets.github.io/Curve-Fitting/', '_blank')">
 			<div class="image-container">
 				<img src="img/Curve-Fitting-card.png" alt="Curve-Fitting project preview">
 			</div>
 			<div class="content-container">
 				<h2>Curve Fitting (Jun 2025)</h2>
 				<p>This project illustrates thin-plate splines, a smooth surface interpolation technique used in geometry and machine learning. </p>
+			</div>
+		</div>
+		
+		<div class="project-card reverse" onclick="window.open('https://wartets.github.io/Procedural-Art/', '_blank')">
+			<div class="image-container">
+				<img src="img/Procedural-Art-card.png" alt="Procedural Art project preview">
+			</div>
+			<div class="content-container">
+				<h2>Procedural Art Gen. (May 2025)</h2>
+				<p>A seed-based generative art system creating unique visual patterns. 
+					Explore geometric formations, organic fractals, and abstract compositions that remain reproducible.</p>
 			</div>
 		</div>
 		
