Refactor project cards to render dynamically

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<p>Explore my interactive simulations, experiments, and creations.</p>
 	</header>
 	<main>
-		<div class="project-card" onclick="window.open('https://wartets.github.io/Curve-Fitting/', '_blank')">
+<!-- 		<div class="project-card" onclick="window.open('https://wartets.github.io/Curve-Fitting/', '_blank')">
 			<div class="image-container">
 				<img src="img/Curve-Fitting-card.png" alt="Curve-Fitting project preview">
 			</div>
@@ -180,7 +180,7 @@
 					<p>Explore my music projects on YouTube.</p>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		
 		<div id="link-display"></div>
 		
