Add seasonal theme selector to main page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 	<main>
 		<div id="link-display"></div>
 
+		<div id="theme-selector">
+			<div class="theme-btn winter" title="Winter"></div>
+			<div class="theme-btn spring" title="Spring"></div>
+			<div class="theme-btn summer" title="Summer"></div>
+			<div class="theme-btn autumn" title="Automn"></div>
 		</div>
 	
 		<!-- Small penguin -->
