--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="keywords" content="Wartets, Colin Bossu, interactive simulations, fractals, physics, maths, music, game, art, 3D visualization, bird flocking, N-body simulation, solar system, SoundCloud, music, YouTube">
 	<meta name="robots" content="index, follow">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<link rel="apple-touch-icon" href="https://wartets.github.io/Wartets/image/app-icon.jpg">
+	<link rel="apple-touch-icon" href="https://wartets.github.io/Wartets/img/app-icon.jpg">
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="Wartets' Projects | Interactive Simulations & Creations">
 	<meta property="og:description" content="Explore interactive simulations and unique creations by Wartets (Colin Bossu). Dive into maths, physics simulations, and more.">
@@ -54,5 +54,6 @@
 	</footer>
 	<script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
 	<script src="script.js"></script>
+	<script src="script-animal.js"></script>
 </body>
 </html>
