--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
 			<div class="theme-btn autumn" title="Automn"></div>
 		</div>
 	
-		<!-- Small penguin -->
-		<img id="penguin" src="img/pinguin-stop.png" alt="Pingouin" style="display:none"/> <!-- Pingouin désactivé -->
-		<div id="background-bushes"></div>
-		<div id="background-snowflakes"></div>
+		<!-- Small penguin --> <!-- Pingouin désactivé -->
+		<img id="penguin" src="img/pinguin-stop.png" alt="Pingouin" style="display:none"/> 
+		
+		<div id="background-bushes" class="hidden"></div>
+		<div id="background-snowflakes" class="hidden"></div>
+		<div id="background-flowers" class="hidden"></div>
+		<div id="background-leaves" class="hidden"></div>
 
 		<button id="back-to-top" onclick="scrollToTop()">↑</button>
 	</main>
