Fixed category filter to project search and update styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<span>'</span>
 			<span>p</span><span>r</span><span>o</span><span>j</span><span>e</span><span>c</span><span>t</span><span>s</span>
 		</h1>
-		<h4>Also known as <i>Colin Bossu</i></h4>
+		<h4>Also known as <i>Colin Bossu Réaubourg</i></h4>
 		<p>Explore my interactive simulations, experiments, and creations.</p>
 	</header>
 	<main>
