--- a/window/index.html
+++ b/window/index.html
@@ -16,12 +16,12 @@
     <meta property="og:url" content="https://wartets.github.io/wartets">
 </head>
 <body>
-    <div id="desktop">
+    <div id="desktop" class="crt-scanlines">
         <div id="start-button" class="xp-button">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Unofficial_Windows_logo_variant_-_2002%E2%80%932012_%28Multicolored%29.svg/1024px-Unofficial_Windows_logo_variant_-_2002%E2%80%932012_%28Multicolored%29.svg.png" alt="Windows Logo" class="windows-logo">
             <span>Start</span>
         </div>
-        <div id="start-menu" class="xp-window hidden">
+        <div id="start-menu" class="xp-window hidden crt-scanlines">
             <div class="xp-window-header">
                 <span class="title">Wartets XP</span>
             </div>
@@ -38,7 +38,7 @@
                         <li><a href="https://www.youtube.com/@Wartets" target="_blank" class="xp-button-small">YouTube</a></li>
                     </ul>
                 </div>
-                <div class="start-menu-column right-column">
+                <div class="start-menu-column right-column ">
                     <h4>Categories</h4>
                     <ul id="start-menu-categories">
                         <!-- Categories will be dynamically loaded here -->
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <div id="taskbar">
+    <div id="taskbar" class="crt-scanlines">
         <div id="taskbar-start-button" class="xp-button-small">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Unofficial_Windows_logo_variant_-_2002%E2%80%932012_%28Multicolored%29.svg/1024px-Unofficial_Windows_logo_variant_-_2002%E2%80%932012_%28Multicolored%29.svg.png" alt="Windows Logo" class="windows-logo">
             <span>Start</span>
