Enhance icon data handling and folder support

--- a/window/index.html
+++ b/window/index.html
@@ -33,9 +33,11 @@
 					</div>
 					<ul id="start-menu-links">
 						<li><a href="#" data-action="all-projects" class="xp-button-small">My Projects</a></li>
+						<li><a href="https://github.com/wartets/Wartets" target="_blank" class="xp-button-small">Website</a></li>
 						<li><a href="https://github.com/wartets" target="_blank" class="xp-button-small">GitHub</a></li>
 						<li><a href="https://soundcloud.com/wartets" target="_blank" class="xp-button-small">SoundCloud</a></li>
-						<li><a href="https://www.youtube.com/@Wartets" target="_blank" class="xp-button-small">YouTube</a></li>
+						<li><a href="https://www.youtube.com/@colinbossu" target="_blank" class="xp-button-small">YouTube</a></li>
+						<li><a href="https://www.youtube.com/@Wartets" target="_blank" class="xp-button-small">YouTube Music</a></li>
 					</ul>
 				</div>
 				<div class="start-menu-column right-column ">
