--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 		</p>
 	</footer>
 	<script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+	<script src="projects.js"></script>
 	<script src="script.js"></script>
 	<script src="script-animal.js"></script>
 </body>
