--- a/window/index.html
+++ b/window/index.html
@@ -18,7 +18,7 @@
 <body>
 	<div id="desktop" class="crt-scanlines">
 		<div id="start-button" class="xp-button">
-			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Unofficial_Windows_logo_variant_-_2002%E2%80%932012_%28Multicolored%29.svg/1024px-Unofficial_Windows_logo_variant_-_2002%E2%80%932012_%28Multicolored%29.svg.png" alt="Windows Logo" class="windows-logo">
+			<img src="Unofficial_Windows_logo_variant_-_2002–2012_(Multicolored).svg.png" alt="Windows Logo" class="windows-logo">
 			<span>Start</span>
 		</div>
 		<div id="start-menu" class="xp-window hidden crt-scanlines">
@@ -28,7 +28,7 @@
 			<div class="start-menu-content">
 				<div class="start-menu-column left-column">
 					<div class="start-menu-profile">
-						<img src="https://img.icons8.com/color/48/000000/user-male-circle.png" alt="User Icon">
+						<img src="user-male-circle.png" alt="User Icon">
 						<span>Wartets</span>
 					</div>
 					<ul id="start-menu-links">
@@ -57,13 +57,13 @@
 
 	<div id="taskbar" class="crt-scanlines">
 		<div id="taskbar-start-button" class="xp-button-small">
-			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Unofficial_Windows_logo_variant_-_2002%E2%80%932012_%28Multicolored%29.svg/1024px-Unofficial_Windows_logo_variant_-_2002%E2%80%932012_%28Multicolored%29.svg.png" alt="Windows Logo" class="windows-logo">
+			<img src="Unofficial_Windows_logo_variant_-_2002–2012_(Multicolored).svg.png" alt="Windows Logo" class="windows-logo">
 			<span>Start</span>
 		</div>
 		<div class="quick-launch">
-			<img src="https://img.icons8.com/color/48/000000/internet-explorer.png" alt="Internet Explorer" title="Internet Explorer" class="quick-launch-icon">
-			<img src="https://static.wikia.nocookie.net/logopedia/images/0/00/OE2001.png/revision/latest/scale-to-width-down/250?cb=20241229071739" alt="Outlook Express" title="Outlook Express" class="quick-launch-icon">
-			<img src="https://static.wikia.nocookie.net/the-microsoft-windows-xp/images/f/f9/XPIcon.png/revision/latest?cb=20191129153941" alt="Show Desktop" title="Show Desktop" class="quick-launch-icon" id="show-desktop-icon">
+			<img src="internet-explorer.png" alt="Internet Explorer" title="Internet Explorer" class="quick-launch-icon">
+			<img src="OE2001.webp" alt="Outlook Express" title="Outlook Express" class="quick-launch-icon">
+			<img src="XPIcon.png" alt="Show Desktop" title="Show Desktop" class="quick-launch-icon" id="show-desktop-icon">
 		</div>
 		<div id="taskbar-windows">
 			<!-- Minimized windows will appear here -->
@@ -102,7 +102,7 @@
 		</ul>
 	</div>
 
-	<script src="projects.js"></script>
+	<script src="../projects.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
