--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 			<wbr>Check out more projects on <a href="https://github.com/wartets" target="_blank">&#x2197;GitHub</a>.
 		</p>
 	</footer>
+	
+	<a href="window/index.html" target="_blank" id="xp-portfolio-link" title="Ouvrir le portfolio XP">
+		<img src="img/xp-computer-icon.webp" alt="Portfolio Windows XP">
+	</a>
+	
 	<script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
 	<script src="projects.js"></script>
 	<script src="script.js"></script>
