--- a/window/index.html
+++ b/window/index.html
@@ -102,6 +102,27 @@
 		</ul>
 	</div>
 
+	<div id="calendar-popup" class="xp-window hidden">
+		<div id="calendar-header">
+			<button id="calendar-prev">&lt;</button>
+			<span id="calendar-month-year"></span>
+			<button id="calendar-next">&gt;</button>
+		</div>
+		<div id="calendar-days-header">
+			<div>Su</div>
+			<div>Mo</div>
+			<div>Tu</div>
+			<div>We</div>
+			<div>Th</div>
+			<div>Fr</div>
+			<div>Sa</div>
+		</div>
+		<div id="calendar-grid"></div>
+		<div id="calendar-footer">
+			<span id="calendar-today-date"></span>
+		</div>
+	</div>
+
 	<script src="../projects.js"></script>
 	<script src="script.js"></script>
 </body>
